examples/expected/check_invalid_unknown_var.txt
error[E1002]: undefined variable 'x'
  --> examples/invalid_unknown_var.tp:2:9
   |
 2 |   print(x)
   |         ^
